[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evalhub-test-provider"
version = "0.1.0"
description = "Test EvalHub provider: reads JSON from /data, shows dataframe, sends metrics to MLflow"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pandas>=2.0.0",
    # EvalHub SDK upstream dev branch (adapter + MLflow support)
    "eval-hub-sdk[adapter]==0.1.2",
]

[project.scripts]
evalhub-test-adapter = "evalhub_test_provider.adapter:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/evalhub_test_provider"]

[tool.hatch.build.targets.sdist]
include = ["src/evalhub_test_provider"]
